--- a/ToDo.txt
+++ b/ToDo.txt
@@ -5,7 +5,6 @@
  - able to sell ships/collectors?
 
 
-
 - Sort out ship collision
  - figure out how to layout multiple ships moving at the same time, 
    so they dont collide
@@ -15,7 +14,7 @@
 - Move the shooting scout ships creation into the makeships function  
  - Put working cannons onto every ship
 
-
+- Enemies attack Resource collectors
 - More Enemies
  - Sea Monsters
  - Pirate Ships
